--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "author": "efea",
   "license": "MIT",
   "dependencies": {
+    "bcrpyt": "^2.0.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^7.0.3"
+    "mongoose": "^6.10.4",
+    "mongoose-unique-validator": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^8.36.0",
